[package]
name = "schrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[dependencies]
lazy_static = "1.4.0"
paste = "1.0.12"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
rand = "0.8.5"
criterion = {version= "0.4.0", features = ["html_reports"]}
